--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,20 +1,12 @@
 @import 'partials/variables';
+@import 'partials/mixins';
 @import 'partials/animations';
 @import 'partials/nav';
 @import 'partials/homecontent';
-@import 'partials/myworkcontent';
+@import 'partials/_projects';
 @import 'partials/footer';
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&display=swap');
-
-
-
-@mixin flex($direction, $justify) {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: $justify;
-    flex-direction: $direction;
-  }
 
 
 * {
@@ -38,132 +30,4 @@ main {
     width: 100%;
     max-width: 1000px;
     margin-bottom: 300px;
-}
-
-@mixin background($colour, $url) {
-    background-image: url(#{$url});
-    background-position: center;
-    background-size: cover;
-    color: transparent;
-    
-    &:hover {
-      color: black;
-      background: $colour;
-      transition: .5s ease-in;
-    }
-   
-}
-
-.container {
-    @include flex(column, center);
-    width: 65vw;
-    max-width: 1000px;
-    margin-bottom: 200px;
-    margin-top: 100px;
-  }
-
-.all-projects{
-    margin-top: 5%;
-    @include flex(row, flex-start);
-    a {
-        text-decoration: none;
-        color: white;
-        flex-grow: 1;
-        flex-shrink: 1;
-        flex-basis: 25%;
-   
-    }
-    div {
-        @include flex(column, center);
-        height: 350px;
-        overflow: hidden;
-        margin: 10px 0;
-     
-        @media only screen and (min-width: 601px) {
-          margin: 10px 10px;
-        }
-
-        .tech-stack,
-        .resource {
-          position: relative;
-          left: 2rem;
-          padding-top: 1rem;
-          width: 300px;
-          
-          li {
-            display: inline-block;
-           
-            &:after {
-              content: " / ";
-            }
-          }
-        }
-
-        h3 {
-          font-family: $body-font-family;
-          font-size: 2em;
-          padding-left: 2rem;
-          padding-top: 1rem;
-          margin-right: 3em;
-          display:none;
-        }
-       
-    }
-}
-
-#ytc {
-    @include background($background-color, "../imgs/ytc.png");
-  }
-
-#taskio {
-    @include background($background-color, "../imgs/taskio.png");
-  }
-
-#readme {
-    @include background($background-color, "../imgs/readme.png");
-  }
-#pokemon {
-    @include background($background-color, "../imgs/pokemon.png");
-  }
-#rpsls {
-    @include background($background-color, "../imgs/rpsls.png");
-  }
-#old_port {
-    @include background($background-color, "../imgs/old_port.png");
-  }
-
-#new_port {
-    @include background($background-color, "../imgs/new_port.png");
-  }
-#pokemon{
-    @include background($background-color, "../imgs/pokemon.png");
-  }
-
-@media only screen and (max-width: 600px) {
-    .container {
-      width: 95vw;
-    }
-  }
-
-/* Tablet Styles */ 
-@media only screen 
-and (min-device-width: 601px) 
-and (-webkit-min-device-pixel-ratio: 1) {
-    .container {
-        overflow-x: hidden;
-        width: 75vw;
-      }
-      
-}
-/* Desktop Styles */ 
-@media only screen and (min-width:1201px) {
-.container {
-    overflow-x: hidden;
-    .container {
-        width: 65vw;
-    
-  }
-
- }
-
 }
