--- a/src/styles/partials/_footer.scss
+++ b/src/styles/partials/_footer.scss
@@ -1,21 +1,17 @@
 /* Mobile Styles */ /* Footer */
+
 .footer-container {
-    display: flex;
-    flex-flow: row wrap;
+    @include flex(row, flex-start); 
     padding: 0;
-    margin: 0;
- 
-    
+    margin: 0 15px 0 15px;
 }  
 .footer-part1-container {
-    display: flex;
-    flex-flow: row wrap;
+    @include flex(row, center); 
     padding: 0;
     margin: 0;
 } 
 .footer-part1 { 
-    display: flex;
-    justify-content: flex-start;  
+    @include flex(row, flex-start); 
     padding: 10px;
     align-self: left;
     font-family:  $heading-font-family;
@@ -23,10 +19,9 @@
     font-size: 2rem;
 }
  .footer-part2, .footer-part3, .footer-part4, .footer-icons, .footer-base {
-    display: flex;
-    justify-content: flex-start;  
-    padding: 10px;
-    font-size: 0.75rem;
+    @include flex(row, flex-start); 
+    padding: 15px;
+    font-size: 1rem;   
 }
 
 .footer-part4 {
@@ -36,7 +31,6 @@
 .footer-icons {
     padding-top: 20px;
     list-style: none;
-  
 }
 
 .icons {
@@ -47,9 +41,9 @@
     color: black;
 }
 .footer-base {
+    @include flex(row, space-between); 
     width: 100%;
-    display: flex;
-    justify-content: space-between;
+    
 }
 
 .footer-base p, .footer-base a  {
@@ -69,8 +63,6 @@
 
 }
 
-
-
 /* Tablet Styles */ /* FOOTER */
 @media only screen 
   and (min-device-width: 768px) 
@@ -84,7 +76,7 @@
         margin-bottom: -20px;
        }
        
-       .footer-part2, .footer-part3, .footer-part4, .footer-part5, .footer-icons, .footer-base {
+       .footer-part2, .footer-part3, .footer-part4, .footer-icons, .footer-base {
         width: 300px;
         height: 40px;
         margin: 20px;
@@ -100,9 +92,7 @@
         width: 100%;
         padding: 30px 0px 20px 0px;
         margin: 30px 0px 20px 0px;    
-    }
-   
-        
+    }      
 }
 
 /* Desktop Styles */ /* FOOTER */
@@ -111,15 +101,10 @@
         justify-content: center;
         margin: 30px;
        }
-       .footer-part1-container {
-        justify-content: center;
-        margin-bottom: -20px;
-       }
-       .footer-part2, .footer-part3, .footer-part4, .footer-part5, .footer-icons, .footer-base {
+       .footer-part2, .footer-part3, .footer-part4, .footer-icons, .footer-base {
         width: 300px;
         height: 40px;
         margin: 20px;
-        font-size: 0.9rem;
     }
 
     .footer-icons {
@@ -133,6 +118,10 @@
         margin: 30px 0px 20px 0px;    
     }
   }
+
+
+
+  
 /* RETURN TO TOP */ 
   #return-to-top {
     position: fixed;
