--- a/src/styles/partials/_homecontent.scss
+++ b/src/styles/partials/_homecontent.scss
@@ -20,11 +20,15 @@
      }
     }
     
+   
+   
+}
+.intro_paragraph{
     p span.features-special {
-            color:$text-color;
-            font-size: 2rem;
-            font-weight: 600;
-        }
+        color:$text-color;
+        font-size: 2rem;
+        font-weight: 600;
+    }
     p span:nth-child(4).features-special {
             color:$alternate-color;
             font-size: 2rem;
@@ -39,7 +43,11 @@
     margin-left: 30px;
 }
 
-
+.intro-content {
+    margin-top: 2.5rem;
+    line-height: 1.7em;
+    font-size: 1rem;
+}
     
 /*******************************/
 
@@ -51,7 +59,7 @@
    
     .intro-sec1, .intro-text {
         margin-right: 200px;
-        margin-left: 200px;
+        margin-left: 200px; 
     }
         
 }
