--- a/src/styles/partials/_projects.scss
+++ b/src/styles/partials/_projects.scss
@@ -4,7 +4,7 @@
     width: 75vw;
     max-width: 1000px;
     margin-bottom: 200px;
-    margin-top: 100px;
+    margin-top: 100px;    
   }
 
 .all-projects{
@@ -20,10 +20,9 @@
     }
     div {
         @include flex(column, center);
-        height: 350px;
+        height: 20em;
         overflow: hidden;
-        margin: 10px 0;
-        
+        margin: 0.5rem 0rem;
         .tech-stack, .resource {
           position: relative;
           padding-top: 1em;
@@ -47,8 +46,9 @@
         }
 
         @media only screen and (min-width: 601px) {
-          margin: 10px 10px;
+          margin: 0.5rem 0.5rem;
         }
+    
        
     }
 }
@@ -81,15 +81,16 @@
     @include background($background-color, "../imgs/pokemon.png");
   }
 
-  .project-heading{
-   
+.project-heading{
     margin: 0 2rem 2rem 2rem ;
     padding: 0 2.5rem 2.5rem 2.5rem ;
     
     h3{
         left: 0;
+        padding-left: 15px;
     }
 }
+
 
 
 
@@ -97,7 +98,7 @@
 /* Phone Styles */ 
 @media only screen and (max-width: 600px) {
     .container {
-
+      width: 95vw;
     }
   }
 
@@ -107,6 +108,7 @@ and (min-device-width: 601px)
 and (-webkit-min-device-pixel-ratio: 1) {
     .container {
         overflow-x: hidden;
+        width: 75vw;
       }
       
 }
@@ -115,7 +117,7 @@ and (-webkit-min-device-pixel-ratio: 1) {
 .container {
     overflow-x: hidden;
     .container {
-          
+      width: 65vw;
   }
  }
 }
