--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,8 +2,9 @@
 @import 'partials/mixins';
 @import 'partials/animations';
 @import 'partials/nav';
+@import 'partials/projects';
 @import 'partials/homecontent';
-@import 'partials/_projects';
+
 @import 'partials/footer';
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&display=swap');
