--- a/src/styles/partials/_projects.scss
+++ b/src/styles/partials/_projects.scss
@@ -1,7 +1,7 @@
 
 .container {
     @include flex(column, center);
-    width: 75vw;
+    width: 65vw;
     max-width: 1000px;
     margin-bottom: 200px;
     margin-top: 100px;    
@@ -13,16 +13,15 @@
     a {
         text-decoration: none;
         color: white;
-        flex-grow: 1;
-        flex-shrink: 1;
-        flex-basis: 25%;
-   
+        flex: 1 1 25%;
     }
     div {
         @include flex(column, center);
         height: 20em;
         overflow: hidden;
         margin: 0.5rem 0rem;
+        
+        
         .tech-stack, .resource {
           position: relative;
           padding-top: 1em;
@@ -82,23 +81,47 @@
   }
 
 .project-heading{
-    margin: 0 2rem 2rem 2rem ;
-    padding: 0 2.5rem 2.5rem 2.5rem ;
-    
+    margin-bottom: 80px;
+    padding: 10px;
+    width: 65vw;
+    max-width: 1000px;
     h3{
-        left: 0;
-        padding-left: 15px;
+        
+        text-align: left;
+       
     }
 }
 
+.project{ 
+  position: absolute; 
+  z-index: -1;
+  font-size: 4em; 
+  color: white; 
+} 
 
+.project::before {  
+  content: attr(data-text); 
+  position: absolute; 
+  color: black; 
+  overflow: hidden; 
+  width: 0%; 
+  transition: 1s; 
+  animation: fillup 3s linear;
+  animation-fill-mode: forwards;
+} 
+
+@keyframes fillup {
+  to {
+      width: 100%;   
+  }
+}
 
 
 
 /* Phone Styles */ 
 @media only screen and (max-width: 600px) {
     .container {
-      width: 95vw;
+      width: 55vw;
     }
   }
 
