--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -186,6 +186,8 @@ header img {
 
 .Navbar__Link-toggle {
   display: none;
+  -webkit-transition: 2s ease;
+  transition: 2s ease;
 }
 
 @media only screen and (max-width: 768px) {
@@ -565,7 +567,10 @@ header img {
 /*******************************/
 /* Tablet Styles */
 /** MAIN CONTENT */
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 1) {
+@media only screen and (min-width: 768px) {
+  .desktop-container {
+    margin: 0 20 0 20px;
+  }
   .intro-sec1, .intro-text {
     margin-right: 200px;
     margin-left: 200px;
